# distributed-metrics

./: .gitignore  Cargo.toml  Dockerfile  Metrics.example.yaml  README.md  api-spec.json  dist-workspace.toml  docker-compose.yaml
.github/: build-setup.yml  docker-publish.yml
.github/workflows/: docker-publish.yml  release.yml
dashboards/: dns.json  hls.json  http.json  icmp.json  prom-dns.json  prom-ping.json
src/: collector.rs  config.rs  main.rs  web.rs
src/collectors/: dns.rs  hls.rs  http.rs  icmp.rs  mod.rs  runner.rs
src/collectors/dns/: errors.rs  mod.rs
