[package]
name = "dns-metric-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
progenitor = { version = "0.8.0" }
prometheus = "0.13.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1", features = [] }
serde_json = { version = "1" }
eyre = "0.6.12"
keshvar = { version = "0.5.0", features = [
  "search-country-code",
  "iso-currency-integration",
  "geo",
  "subdivisions",
  "serde-derive",
] }
warp = "0.3.7"
strum = { version = "0.26", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regress = "0.10.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
